sources: utilisation protocol de l'url et Apache VFS